--- a/templates/characters.html
+++ b/templates/characters.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
     <title>BattleRoster | Characters</title>
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +21,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <!-- Logo -->
-            <a class="navbar-brand" href="{% url 'index.html'%}">
-                <img class="home" src="{% static 'images/battleroster-logo.png'%}" alt="BattleRoster Logo"
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img class="home" src="{% static 'images/battleroster-logo.png' %}" alt="BattleRoster Logo"
                     id="battleroster-logo">
             </a>
 
@@ -57,86 +57,90 @@
                     </li>
                 </ul>
             </div>
+        </div>
+    </nav>
 
-            <!-- Main content -->
-            <div class="container-fluid bg-dark text-light py-5">
-                <div class="row justify-content-center align-items-center">
-                    <div class="character-sheet">
-                        <h1>Character Name</h1>
-                        <a href="signup-login.html">Sign-up/Log-in to save your character sheets</a>
+    <!-- Main content -->
+    <div class="container-fluid bg-dark text-light py-5">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-12 character-sheet">
+                <h1>Character Name</h1>
+                <a href="{% url 'signup-login' %}">Sign-up/Log-in to save your character sheets</a>
 
-                        <div class="container mt-4">
-                            <div class="d-flex justify-content-between align-items-center mb-3">
-                                <h2>Characters</h2>
-                                <button id="new-character-btn" class="btn btn-primary">New Character</button>
-                            </div>
+                <div class="container mt-4">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h2>Characters</h2>
+                        <button id="new-character-btn" class="btn btn-primary">New Character</button>
+                    </div>
 
-                            <div id="char-grid" class="row g-3">
-                                <!-- JS will inject cards here -->
-                            </div>
-                        </div>
+                    <div id="char-grid" class="row g-3">
+                        <!-- JS will inject cards here -->
+                    </div>
+                </div>
 
-                        <!-- Character modal (create / edit) -->
-                        <div class="modal fade" id="characterModal" tabindex="-1" aria-hidden="true">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <form id="character-form">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="modalTitle">Character</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                                aria-label="Close"></button>
-                                        </div>
-                                        <div class="modal-body">
-                                            <!-- We'll dynamically render fields based on sheet headers -->
-                                            <div id="form-fields" class="row g-2"></div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" id="delete-btn"
-                                                class="btn btn-danger me-auto">Delete</button>
-                                            <button type="submit" class="btn btn-primary">Save</button>
-                                            <button type="button" class="btn btn-secondary"
-                                                data-bs-dismiss="modal">Close</button>
-                                        </div>
-                                    </form>
+                <!-- Character modal (create / edit) -->
+                <div class="modal fade" id="characterModal" tabindex="-1" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <form id="character-form">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="modalTitle">Character</h5>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
                                 </div>
-                            </div>
+                                <div class="modal-body">
+                                    <div id="form-fields" class="row g-2"></div>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" id="delete-btn" class="btn btn-danger me-auto">Delete</button>
+                                    <button type="submit" class="btn btn-primary">Save</button>
+                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                </div>
+                            </form>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-                        <!-- Footer -->
-                        <footer id="footerSocials">
-                            <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
-                                <li>
-                                    <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                                        aria-label="visit our Facebook page (opens in a new tab)"><i
-                                            class="fa-brands fa-facebook"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://www.X.com/" target="_blank" rel="noopener"
-                                        aria-label="visit our X page (opens in a new tab)"><i
-                                            class="fa-brands fa-square-x-twitter"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                                        aria-label="visit our YouTube page (opens in a new tab)"><i
-                                            class="fa-brands fa-youtube-square"></i></a>
-                                </li>
-                                <li>
-                                    <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                                        aria-label="visit our Instagram page (opens in a new tab)"><i
-                                            class="fa-brands fa-instagram"></i></a>
-                                </li>
-                            </ul>
-                        </footer>
+    <!-- Footer -->
+    <footer id="footerSocials">
+        <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.X.com/" target="_blank" rel="noopener" aria-label="visit our X page (opens in a new tab)">
+                    <i class="fa-brands fa-square-x-twitter"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+            </li>
+        </ul>
+    </footer>
 
-                        <!-- Scripts -->
-                        <script src="js/characters.js"></script>
-                        <script src="js/main.js"></script>
-                        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-                            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLlvGRem5+R9g2FzA8ZGN954O5Q"
-                            crossorigin="anonymous"></script>
-                        <!-- Font Awesome -->
-                        <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
-                        <script src="{% static 'js/characters.js' %}"></script>
+    <!-- Scripts -->
+    <script src="{% static 'js/characters.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
