--- a/templates/party.html
+++ b/templates/party.html
@@ -10,7 +10,7 @@
   <meta name="keywords"
     content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
   <title>BattleRoster | Party Management</title>
-  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -21,8 +21,8 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <!-- Logo -->
-      <a class="navbar-brand" href="{% url'index.html'%}">
-        <img class="home" src="{% static 'images/battleroster-logo.png'%}" alt="BattleRoster Logo" id="battleroster-logo">
+      <a class="navbar-brand" href="{% url 'home' %}">
+        <img class="home" src="{% static 'images/battleroster-logo.png' %}" alt="BattleRoster Logo" id="battleroster-logo">
       </a>
 
       <!-- Hamburger button -->
@@ -35,59 +35,69 @@
       <div class="collapse navbar-collapse justify-content-end" id="navMenu">
         <ul class="navbar-nav flex-column align-items-start">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'characters.html'%}">
+            <a class="nav-link" href="{% url 'characters' %}">
               <i class="fa-solid fa-user me-2 text-gold"></i>Characters
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'party.html'%}">
+            <a class="nav-link" href="{% url 'party' %}">
               <i class="fa-solid fa-users me-2 text-gold"></i>Party
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup-login.html'%}">
+            <a class="nav-link" href="{% url 'signup-login' %}">
               <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'contact.html'%}">
+            <a class="nav-link" href="{% url 'contact' %}">
               <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
             </a>
           </li>
         </ul>
       </div>
+    </div>
   </nav>
 
   <!-- Main content -->
   <div class="container-fluid bg-dark text-light py-5">
     <div class="row justify-content-center align-items-center">
-
-
+      <div class="col-12 text-center">
+        <h1>Party Management</h1>
+        <p>Here you can view and manage your party members, check health, mana, and coordinate team strategies.</p>
+        <!-- Add your party-specific content here -->
+      </div>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer id="footerSocials">
     <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
       <li>
-        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-          aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="visit our Facebook page (opens in a new tab)">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
       </li>
       <li>
-        <a href="https://www.X.com/" target="_blank" rel="noopener"
-          aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+        <a href="https://www.X.com/" target="_blank" rel="noopener" aria-label="visit our X page (opens in a new tab)">
+          <i class="fa-brands fa-square-x-twitter"></i>
+        </a>
       </li>
       <li>
-        <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-          aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+        <a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="visit our YouTube page (opens in a new tab)">
+          <i class="fa-brands fa-youtube-square"></i>
+        </a>
       </li>
       <li>
-        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-          aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="visit our Instagram page (opens in a new tab)">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
       </li>
     </ul>
   </footer>
 
   <!-- Scripts -->
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
     crossorigin="anonymous"></script>
