--- a/templates/signup-login.html
+++ b/templates/signup-login.html
@@ -3,98 +3,118 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description"
-    content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
-  <meta name="keywords"
-    content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
-  <title>BattleRoster | Account Management</title>
-  <link rel="stylesheet" href="static/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+        content="BattleRoster is designed to streamline tabletop game management for both players and dungeon masters.">
+    <meta name="keywords"
+        content="hobby, hobbies, interests, clubs, groups, gaming, tabletop, rosters, multiplayer, fantasy, dungeons and dragons">
+    <title>BattleRoster | Account Management</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <!-- Logo -->
-      <a class="navbar-brand" href="{% url 'index.html'%}">
-        <img class="home" src="{% static 'images/battleroster-logo.png'%}" alt="BattleRoster Logo"
-          id="battleroster-logo">
-      </a>
-
-      <!-- Hamburger button -->
-      <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
-        data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Navbar items -->
-      <div class="collapse navbar-collapse justify-content-end" id="navMenu">
-        <ul class="navbar-nav flex-column align-items-start">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'characters' %}">
-              <i class="fa-solid fa-user me-2 text-gold"></i>Characters
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+            <!-- Logo -->
+            <a class="navbar-brand" href="{% url 'home' %}">
+                <img class="home" src="{% static 'images/battleroster-logo.png' %}" alt="BattleRoster Logo"
+                    id="battleroster-logo">
             </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'party' %}">
-              <i class="fa-solid fa-users me-2 text-gold"></i>Party
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'signup-login' %}">
-              <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'contact' %}">
-              <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
-            </a>
-          </li>
-        </ul>
-      </div>
 
+            <!-- Hamburger button -->
+            <button class="navbar-toggler ms-auto custom-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navMenu" aria-controls="navMenu" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-      <!-- Main content -->
-      <div class="container-fluid bg-dark text-light py-5">
+            <!-- Navbar items -->
+            <div class="collapse navbar-collapse justify-content-end" id="navMenu">
+                <ul class="navbar-nav flex-column align-items-start">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'characters' %}">
+                            <i class="fa-solid fa-user me-2 text-gold"></i>Characters
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'party' %}">
+                            <i class="fa-solid fa-users me-2 text-gold"></i>Party
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup-login' %}">
+                            <i class="fa-solid fa-save me-2 text-gold"></i>Sign-up/Log-in
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'contact' %}">
+                            <i class="fa-solid fa-scroll me-2 text-gold"></i>Contact
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main content -->
+    <div class="container-fluid bg-dark text-light py-5">
         <div class="row justify-content-center align-items-center">
+            <div class="col-12 col-md-6">
+                <div class="p-5" style="background-color: rgba(69, 64, 61, 0.7); border-radius: 0.5rem;">
+                    <h1>Account Management</h1>
+                    <p class="mb-4">Sign-up or log in to manage your characters, party, and adventures.</p>
+                    
+                    <!-- Sign-up / Log-in forms can go here -->
+                    <form id="account-form">
+                        <div class="mb-3">
+                            <label for="username" class="form-label">Username</label>
+                            <input type="text" class="form-control" id="username" name="username">
+                        </div>
+                        <div class="mb-3">
+                            <label for="password" class="form-label">Password</label>
+                            <input type="password" class="form-control" id="password" name="password">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Log In</button>
+                        <button type="button" class="btn btn-secondary">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-
-          <!-- Footer -->
-          <footer id="footerSocials">
-            <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
-              <li>
+    <!-- Footer -->
+    <footer id="footerSocials">
+        <ul id="social-networks" class="socials list-unstyled d-flex gap-5 justify-content-center">
+            <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                  aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-              </li>
-              <li>
+                    aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
                 <a href="https://www.X.com/" target="_blank" rel="noopener"
-                  aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
-              </li>
-              <li>
+                    aria-label="visit our X page (opens in a new tab)"><i class="fa-brands fa-square-x-twitter"></i></a>
+            </li>
+            <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                  aria-label="visit our YouTube page (opens in a new tab)"><i
-                    class="fa-brands fa-youtube-square"></i></a>
-              </li>
-              <li>
+                    aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
                 <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                  aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-              </li>
-            </ul>
-          </footer>
+                    aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </footer>
 
-          <!-- Scripts -->
-          <script src="js/main.js"></script>
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-            crossorigin="anonymous"></script>
-          <!-- Font Awesome -->
-          <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
+    <!-- Scripts -->
+    <script src="{% static 'js/main.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+        crossorigin="anonymous"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/f84e35c3bf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
